; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/phy/extr_phy_lcn.c_wlc_lcnphy_clear_papd_comptable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/phy/extr_phy_lcn.c_wlc_lcnphy_clear_papd_comptable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_phy = type { i32 }
%struct.phytbl_info = type { i32*, i32, i32, i64, i32 }

@LCNPHY_TBL_ID_PAPDCOMPDELTATBL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.brcms_phy*)* @wlc_lcnphy_clear_papd_comptable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wlc_lcnphy_clear_papd_comptable(%struct.brcms_phy* %0) #0 {
  %2 = alloca %struct.brcms_phy*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.phytbl_info, align 8
  %5 = alloca [128 x i32], align 16
  store %struct.brcms_phy* %0, %struct.brcms_phy** %2, align 8
  %6 = getelementptr inbounds [128 x i32], [128 x i32]* %5, i64 0, i64 0
  %7 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %4, i32 0, i32 0
  store i32* %6, i32** %7, align 8
  %8 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %4, i32 0, i32 1
  store i32 128, i32* %8, align 8
  %9 = load i32, i32* @LCNPHY_TBL_ID_PAPDCOMPDELTATBL, align 4
  %10 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %4, i32 0, i32 4
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %4, i32 0, i32 2
  store i32 32, i32* %11, align 4
  %12 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %4, i32 0, i32 3
  store i64 0, i64* %12, align 8
  %13 = getelementptr inbounds [128 x i32], [128 x i32]* %5, i64 0, i64 0
  %14 = call i32 @memset(i32* %13, i32 0, i32 512)
  store i32 1, i32* %3, align 4
  br label %15

15:                                               ; preds = %22, %1
  %16 = load i32, i32* %3, align 4
  %17 = icmp slt i32 %16, 128
  br i1 %17, label %18, label %25

18:                                               ; preds = %15
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds [128 x i32], [128 x i32]* %5, i64 0, i64 %20
  store i32 524288, i32* %21, align 4
  br label %22

22:                                               ; preds = %18
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 2
  store i32 %24, i32* %3, align 4
  br label %15

25:                                               ; preds = %15
  %26 = load %struct.brcms_phy*, %struct.brcms_phy** %2, align 8
  %27 = call i32 @wlc_lcnphy_write_table(%struct.brcms_phy* %26, %struct.phytbl_info* %4)
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @wlc_lcnphy_write_table(%struct.brcms_phy*, %struct.phytbl_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
